# PortalTouch

./: .gitignore  README.md
src/portaltouch/: pyproject.toml
src/portaltouch/portaltouch/: __init__.py  api.py  app.py  verify.py
src/portaltouch/portaltouch/templates/: base.html  login.html
