[tool.poetry]
name = "portaltouch"
version = "0.1.0"
description = "portal touch point website"
authors = ["Steny Liu <steny.liu@epictech.com.tw>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
line-bot-sdk = "^2.0.1"
firebase-admin = "^5.2.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
Flask = "^2.0.2"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
